# RealtimeRendering

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
asset/: imgui.ini
asset/models/: Sphere.gltf  SphereWithMaterial.gltf  cube_sphere.glb  cubes_1000.glb  metallic_roughness_spheres.glb
asset/models/metallic_roughness_spheres/: metallic_roughness_spheres.gltf
asset/models/pbr_spheres/: pbr_spheres.gltf
asset/scenes/: cube_sphere.json  cubes_1000.json  metallic_roughness_spheres.json  pbr_helmet.json  pbr_spheres.json  sponza.json  two_boxes.json
shader/: fullscreen.vert  fxaa.frag  shadow_map.frag  shadow_map.glsl  shadow_map.vert  skybox.frag  skybox.vert  ssr.frag  standard.frag  standard.glsl  standard.vert  viewport_grid.frag  viewport_grid.vert  viewport_line.frag  viewport_line.vert
shader/spv/: fullscreen.vert.spv  fxaa.frag.spv  shadow_map.frag.spv  shadow_map.vert.spv  skybox.frag.spv  skybox.vert.spv  ssr.frag.spv  standard.frag.spv  standard.vert.spv  viewport_line.frag.spv  viewport_line.vert.spv
src/: AssetWindow.hpp  Buffer.hpp  IconManager.hpp  MainApp.hpp  MainWindow.cpp  MainWindow.hpp  Object.cpp  Object.hpp  Pass.cpp  Pass.hpp  RenderImages.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneWindow.hpp  ViewportRenderer.hpp  ViewportWindow.hpp  WindowAdapter.hpp  main.cpp
src/editor/: AssetWindow.hpp  AttributeWindow.hpp  Editor.hpp  EditorMessage.hpp  Enums.hpp  IconManager.hpp  MenuBar.hpp  Ray.hpp  SceneWindow.hpp  ViewportWindow.hpp
test/: CMakeLists.txt  main.cpp
